Añadido Footer + imagenes

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -12,21 +12,46 @@ float:right;
 margin-top:30%;
 	
 }
+
+
+
+
+/* CSS HEADER */
+
 header{
-	background-color:#cfc;
+	background-color:#cfF;
 	height:100px;
 	width:100%;
 	border:1px solid black;
 }
+
+
+
+
+/* CSS MAIN */
+
+
 main{
 	background-color:#cfc;
 	border:1px solid black;
 	height:800px;
 	width:100%;
 }
+
+
+
+
+
+
+/* CSS FOOTER */
+
  footer{
- 	background-color:#f55;
-	border:1px solid black;
+ 	background-color:#CCC;
 	height:100px;
 	width:100%;
+ }
+ footer div {padding: 20px;}
+ #copyright {float: left; font-size: 1.2em;}
+ #responsiveIcon {
+ 	width: 100px; float: right;	
  }
