--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,29 +1,79 @@
 @CHARSET "UTF-8";
+
+@media screen and (max-width: 3840px)	{html{font-size: 300%; transition-duration: 2s;}}
+@media screen and (max-width: 2160px)	{html{font-size: 250%; transition-duration: 2s;}}
+@media screen and (max-width: 1920px)	{html{font-size: 200%; transition-duration: 2s;}}
+@media screen and (max-width: 1440px)	{html{font-size: 150%; transition-duration: 2s;}}
+@media screen and (max-width: 1280px)	{html{font-size: 120%; transition-duration: 2s;}}
+@media screen and (max-width: 1024px)	{html{font-size: 100%; transition-duration: 2s;}}
+@media screen and (max-width: 768px)	{html{font-size: 75%; transition-duration: 2s;}}
+@media screen and (max-width: 640px)	{html{font-size: 50%; transition-duration: 2s;}}
+@media screen and (max-width: 480px)	{html{font-size: 25%; transition-duration: 2s;}}
+
+
 html{
-height:100%;
-background-color:#aac;
+font-family: Arial;	
+font-size: 62.5%; 
+height: 100%; 
+cursor: default;
+background-color:#FFF;
+background-image: url("imagenes/logo.png");
+background-repeat: no-repeat;
 	
 }
 body{
 width:80%;
-background-color:#f00;
-border:1px solid red;
+border:1px solid black;
 float:right;
-margin-top:30%;
+margin-top:15%;
 	
 }
 
-
+#wrapper {width: 100%; margin: 0 auto;}
 
 
 /* CSS HEADER */
 
 header{
-	background-color:#cfF;
-	height:100px;
+	background-color:#F90;
+	height:55px;
 	width:100%;
-	border:1px solid black;
 }
+	
+/* Menu */
+#cssmenu {padding: 0; margin: 0; border: 0; font-size: 1.5rem; font-size: 1.5em; font-weight: bold;}
+#cssmenu ul, #cssmenu li {list-style: none; margin: 0; padding: 0;}
+#cssmenu ul {position: relative; z-index: 597; }
+#cssmenu ul li { float: left; min-height: 1px; vertical-align: middle;}
+#cssmenu ul li:hover {position: relative; z-index: 599; cursor: default;}
+#cssmenu ul ul {visibility: hidden; position: absolute; top: 100%; left: 0; z-index: 598; width: 100%;}
+#cssmenu ul ul li {float: none;}
+#cssmenu ul ul ul {top: 0; left: auto; right: -190px; }
+#cssmenu ul li:hover > ul { visibility: visible;}
+#cssmenu ul ul {bottom: 0; left: 0;}
+#cssmenu ul ul {margin-top: 0;}
+#cssmenu ul ul li {font-weight: normal;}
+#cssmenu a { display: block; line-height: 1em; text-decoration: none;}
+#cssmenu {background-color: #000; border-bottom: 1px solid #000; }
+#cssmenu > ul {display: inline-block;}
+#cssmenu:after, #cssmenu ul:after {content: ''; display: block; clear: both;}
+#cssmenu a {background-color: #000; color: #FFF; padding: 0 10px; border-left: 1px solid #FFF; }
+#cssmenu ul {text-transform: uppercase;}
+#cssmenu ul ul {border-top: 3px solid #F00; text-transform: none; min-width: 190px;}
+#cssmenu ul ul a {background-color: #333; color: #FFF; border: 1px solid #000; border-top: 0 none; padding: 0px 10px;}
+#cssmenu ul ul ul {border-top: 0 none;}
+#cssmenu ul ul li {position: relative}  
+#cssmenu > ul > li > a {line-height: 48px;}
+#cssmenu ul ul li:first-child > a {border-top: 1px solid #000;}
+#cssmenu ul ul li:hover > a {background-color: #CF0; color: #000;}
+#cssmenu ul ul li:last-child > a {border-radius: 0 0 10px 10px; box-shadow: 0 1px 0 #000;}
+#cssmenu ul ul li:last-child:hover > a { border-radius: 0 0 10px 10px; }
+#cssmenu ul ul li.has-sub > a:after {content: '➤'; position: absolute; top: 50%; right: 15px; margin-top: -8px;}
+#cssmenu ul li:hover > a, #cssmenu ul li.active > a {background-color: #FC0; color: #000;}
+#cssmenu ul li.has-sub > a:after {margin-left: 5px;}
+#cssmenu ul li.last ul {left: auto; right: 0;}
+#cssmenu ul li.last ul ul {left: auto; right: 99.5%;}
+
 
 
 
@@ -32,8 +82,8 @@ header{
 
 
 main{
-	background-color:#cfc;
-	border:1px solid black;
+	background-color:#FFF;
+	border-top:1px solid black;
 	height:800px;
 	width:100%;
 }
@@ -46,12 +96,11 @@ main{
 /* CSS FOOTER */
 
  footer{
- 	background-color:#CCC;
-	height:100px;
-	width:100%;
+ 	width: 100%; height: 100px; margin: 0 auto; background-color: #FFF;
  }
  footer div {padding: 20px;}
- #copyright {float: left; font-size: 1.2em;}
- #responsiveIcon {
- 	width: 100px; float: right;	
+ #pie1 {width: 100%; height: 100px; margin: 0 auto; background-color: #FFF; }
+	#autor1 {float:left; margin-top: 4%; margin-left: 1%; color: #000; font-size: 1.5rem; font-size: 1.5em;}
+	#responsiveIcon {float: right; width: 100px; margin-top: 4%; margin-right: 1%;}
+	#IesSonFerrer {color: #38B;}
  }
