--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -82,7 +82,7 @@ header{
 
 
 main{
-	background-color:#FFF;
+	background-color:#FFEEDD;
 	border-top:1px solid black;
 	height:800px;
 	width:100%;
@@ -96,7 +96,7 @@ main{
 /* CSS FOOTER */
 
  footer{
- 	width: 100%; height: 100px; margin: 0 auto; background-color: #FFF;
+ 	width: 100%; height: 100px; margin: 0 auto; background-color: #FDA;
  }
  footer div {padding: 20px;}
  #pie1 {width: 100%; height: 100px; margin: 0 auto; background-color: #FFF; }
