--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,14 +1,6 @@
 @CHARSET "UTF-8";
 
-@media screen and (max-width: 3840px)	{html{font-size: 300%; transition-duration: 2s;}}
-@media screen and (max-width: 2160px)	{html{font-size: 250%; transition-duration: 2s;}}
-@media screen and (max-width: 1920px)	{html{font-size: 200%; transition-duration: 2s;}}
-@media screen and (max-width: 1440px)	{html{font-size: 150%; transition-duration: 2s;}}
-@media screen and (max-width: 1280px)	{html{font-size: 120%; transition-duration: 2s;}}
-@media screen and (max-width: 1024px)	{html{font-size: 100%; transition-duration: 2s;}}
-@media screen and (max-width: 768px)	{html{font-size: 75%; transition-duration: 2s;}}
-@media screen and (max-width: 640px)	{html{font-size: 50%; transition-duration: 2s;}}
-@media screen and (max-width: 480px)	{html{font-size: 25%; transition-duration: 2s;}}
+
 
 
 html{
@@ -38,41 +30,77 @@ header{
 	background-color:#F90;
 	height:55px;
 	width:100%;
+
 }
 	
 /* Menu */
-#cssmenu {padding: 0; margin: 0; border: 0; font-size: 1.5rem; font-size: 1.5em; font-weight: bold;}
-#cssmenu ul, #cssmenu li {list-style: none; margin: 0; padding: 0;}
-#cssmenu ul {position: relative; z-index: 597; }
-#cssmenu ul li { float: left; min-height: 1px; vertical-align: middle;}
-#cssmenu ul li:hover {position: relative; z-index: 599; cursor: default;}
-#cssmenu ul ul {visibility: hidden; position: absolute; top: 100%; left: 0; z-index: 598; width: 100%;}
-#cssmenu ul ul li {float: none;}
-#cssmenu ul ul ul {top: 0; left: auto; right: -190px; }
-#cssmenu ul li:hover > ul { visibility: visible;}
-#cssmenu ul ul {bottom: 0; left: 0;}
-#cssmenu ul ul {margin-top: 0;}
-#cssmenu ul ul li {font-weight: normal;}
-#cssmenu a { display: block; line-height: 1em; text-decoration: none;}
-#cssmenu {background-color: #000; border-bottom: 1px solid #000; }
-#cssmenu > ul {display: inline-block;}
-#cssmenu:after, #cssmenu ul:after {content: ''; display: block; clear: both;}
-#cssmenu a {background-color: #000; color: #FFF; padding: 0 10px; border-left: 1px solid #FFF; }
-#cssmenu ul {text-transform: uppercase;}
-#cssmenu ul ul {border-top: 3px solid #F00; text-transform: none;}
-#cssmenu ul ul a {background-color: #333; color: #FFF; text-align: center; border: 1px solid #000; border-top: 0 none; padding: 0px 10px;}
-#cssmenu ul ul ul {border-top: 0 none;}
-#cssmenu ul ul li {position: relative}  
-#cssmenu > ul > li > a {line-height: 48px;}
-#cssmenu ul ul li:first-child > a {border-top: 1px solid #000;}
-#cssmenu ul ul li:hover > a {background-color: #CF0; color: #000;}
-#cssmenu ul ul li:last-child > a {border-radius: 0 0 10px 10px; box-shadow: 0 1px 0 #000;}
-#cssmenu ul ul li:last-child:hover > a { border-radius: 0 0 10px 10px; }
-#cssmenu ul ul li.has-sub > a:after {content: '➤'; position: absolute; top: 50%; right: 15px; margin-top: -8px;}
-#cssmenu ul li:hover > a, #cssmenu ul li.active > a {background-color: #FC0; color: #000;}
-#cssmenu ul li.has-sub > a:after {margin-left: 5px;}
-#cssmenu ul li.last ul {left: auto; right: 0;}
-#cssmenu ul li.last ul ul {left: auto; right: 99.5%;}
+.cssmenu {padding: 0; margin: 0; border: 0; font-size: 1.5rem; font-size: 1.5em; font-weight: bold; position: relative;	z-index:1000; margin-bottom: -55px;}
+.cssmenu ul, .cssmenu li {list-style: none; margin: 0; padding: 0;}
+.cssmenu ul {position: relative; z-index: 597; }
+.cssmenu ul li { float: left; min-height: 1px; vertical-align: middle;}
+.cssmenu ul li:hover {position: relative; z-index: 599; cursor: default;}
+.cssmenu ul ul {visibility: hidden; position: absolute; top: 100%; left: 0; z-index: 598; width: 100%;}
+.cssmenu ul ul li {float: none;}
+.cssmenu ul ul ul {top: 0; left: auto; right: -190px; }
+.cssmenu ul li:hover > ul { visibility: visible;}
+.cssmenu ul ul {bottom: 0; left: 0;}
+.cssmenu ul ul {margin-top: 0;}
+.cssmenu ul ul li {font-weight: normal;}
+.cssmenu a { display: block; line-height: 1em; text-decoration: none;}
+.cssmenu {background-color: #000; border-bottom: 1px solid #000; }
+.cssmenu > ul {display: inline-block;}
+.cssmenu:after, .cssmenu ul:after {content: ''; display: block; clear: both;}
+.cssmenu a {background-color: #000; color: #FFF; padding: 0 10px; border-left: 1px solid #FFF; }
+.cssmenu ul {text-transform: uppercase;}
+.cssmenu ul ul {border-top: 3px solid #F00; text-transform: none;}
+.cssmenu ul ul a {background-color: #333; color: #FFF; text-align: center; border: 1px solid #000; border-top: 0 none; padding: 0px 10px;}
+.cssmenu ul ul ul {border-top: 0 none;}
+.cssmenu ul ul li {position: relative}  
+.cssmenu > ul > li > a {line-height: 48px;}
+.cssmenu ul ul li:first-child > a {border-top: 1px solid #000;}
+.cssmenu ul ul li:hover > a {background-color: #CF0; color: #000;}
+.cssmenu ul ul li:last-child > a {border-radius: 0 0 10px 10px; box-shadow: 0 1px 0 #000;}
+.cssmenu ul ul li:last-child:hover > a { border-radius: 0 0 10px 10px; }
+.cssmenu ul ul li.has-sub > a:after {content: '➤'; position: absolute; top: 50%; right: 15px; margin-top: -8px;}
+.cssmenu ul li:hover > a, .cssmenu ul li.active > a {background-color: #FC0; color: #000;}
+.cssmenu ul li.has-sub > a:after {margin-left: 5px;}
+.cssmenu ul li.last ul {left: auto; right: 0;}
+.cssmenu ul li.last ul ul {left: auto; right: 99.5%;}
+
+/* Menu Fixed*/
+.cssmenu-fixed {padding: 0; margin: 0; border: 0; font-size: 1.5rem; font-size: 1.5em; font-weight: bold; min-width:80%;  position: fixed;	z-index:1000; top:0px; }
+.cssmenu-fixed ul, .cssmenu li {list-style: none; margin: 0; padding: 0;}
+.cssmenu-fixed ul {position: relative; z-index: 597; }
+.cssmenu-fixed ul li { float: left; min-height: 1px; vertical-align: middle;}
+.cssmenu-fixed ul li:hover {position: relative; z-index: 599; cursor: default;}
+.cssmenu-fixed ul ul {visibility: hidden; position: absolute; top: 100%; left: 0; z-index: 598; width: 100%;}
+.cssmenu-fixed ul ul li {float: none;}
+.cssmenu-fixed ul ul ul {top: 0; left: auto; right: -190px; }
+.cssmenu-fixed ul li:hover > ul { visibility: visible;}
+.cssmenu-fixed ul ul {bottom: 0; left: 0;}
+.cssmenu-fixed ul ul {margin-top: 0;}
+.cssmenu-fixed ul ul li {font-weight: normal;}
+.cssmenu-fixed a { display: block; line-height: 1em; text-decoration: none;}
+.cssmenu-fixed {background-color: #000; border-bottom: 1px solid #000; }
+.cssmenu-fixed > ul {display: inline-block;}
+.cssmenu-fixed:after, .cssmenu ul:after {content: ''; display: block; clear: both;}
+.cssmenu-fixed a {background-color: #000; color: #FFF; padding: 0 10px; border-left: 1px solid #FFF; }
+.cssmenu-fixed ul {text-transform: uppercase;}
+.cssmenu-fixed ul ul {border-top: 3px solid #F00; text-transform: none;}
+.cssmenu-fixed ul ul a {background-color: #333; color: #FFF; text-align: center; border: 1px solid #000; border-top: 0 none; padding: 0px 10px;}
+.cssmenu-fixed ul ul ul {border-top: 0 none;}
+.cssmenu-fixed ul ul li {position: relative}  
+.cssmenu-fixed > ul > li > a {line-height: 48px;}
+.cssmenu-fixed ul ul li:first-child > a {border-top: 1px solid #000;}
+.cssmenu-fixed ul ul li:hover > a {background-color: #CF0; color: #000;}
+.cssmenu-fixed ul ul li:last-child > a {border-radius: 0 0 10px 10px; box-shadow: 0 1px 0 #000;}
+.cssmenu-fixed ul ul li:last-child:hover > a { border-radius: 0 0 10px 10px; }
+.cssmenu-fixed ul ul li.has-sub > a:after {content: '➤'; position: absolute; top: 50%; right: 15px; margin-top: -8px;}
+.cssmenu-fixed ul li:hover > a, .cssmenu ul li.active > a {background-color: #FC0; color: #000;}
+.cssmenu-fixed ul li.has-sub > a:after {margin-left: 5px;}
+.cssmenu-fixed ul li.last ul {left: auto; right: 0;}
+.cssmenu-fixed ul li.last ul ul {left: auto; right: 99.5%;}
+
 
 
 
@@ -80,13 +108,18 @@ header{
 
 /* CSS MAIN */
 
-
+#github {position: fixed;	z-index:1000; top:90%; left: 4%; font-size: 2em; border: 1px solid black; border-radius: 10px; padding: 5px 25px 5px 25px;}
 main{
-	background-color:#FFEEDD;
+	background-color:#FFEEDD; margin-top: 55px;
 	border-top:1px solid black;
-	height:800px;
 	width:100%;
 }
+
+main h2 {font-size: 3em; padding-top: 10px; padding-left: 20px;}
+main p {padding: 20px; font-size: 2em; background-color:#FFEEDD; margin-bottom: 0px;}
+
+
+
 
 
 
@@ -104,3 +137,8 @@ main{
 	#responsiveIcon {float: right; width: 100px; margin-top: 2%; margin-right: 1%;}
 	#IesSonFerrer {color: #38B;}
  }
+ 
+ 
+ 
+ 
+ /* CSS MEDIA QUERY */
